--- a/Bot/packages.config
+++ b/Bot/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AForge" version="2.2.5" targetFramework="net472" />
+  <package id="AForge.Imaging" version="2.2.5" targetFramework="net472" />
+  <package id="AForge.Math" version="2.2.5" targetFramework="net472" />
   <package id="Emgu.CV" version="4.8.0.5324" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net472" />
   <package id="Microsoft.Build.Tasks.Git" version="1.0.0" targetFramework="net472" developmentDependency="true" />
